Fixed word-wrap issue in tab version table. Issue #22

--- a/TabRepository/wwwroot/css/main.css
+++ b/TabRepository/wwwroot/css/main.css
@@ -83,3 +83,8 @@
     color: black;
     background-color: lightgrey;
 }
+
+td {
+    word-wrap: break-word;
+    max-width: 1px;
+}
